# vita

./: AUTHORS.txt  CHANGELOG.txt  CITE.txt  CMakeLists.txt  CONTRIBUTING.md  README.md  vita.desktop
src/: CMakeLists.txt  application.qrc  compmeshfree.cpp  compmeshfree3D.h  compnode.cpp  compnode.h  compradmap.cpp  compradmap.h  graphics.cpp  graphics.h  graphwidget.cpp  graphwidget.h  main.cpp  moc_graphwidget.cpp  model.cpp  model.h  modelexternalmesh.cpp  modelexternalmesh.h  modeltile6_104.cpp  modeltile6_104.h  modeltile6_109.cpp  modeltile6_109.h  modeltile6_523.cpp  modeltile6_523.h  plot2D.cpp  plot2D.h  qrc_application.cpp  vitamainwindow.cpp  vitamainwindow.h  vtkinterface.cpp  vtkinterface.h
src/images/: .directory
